k3s-cluster-apps/apps/tools/homepage/app/traefikCRD.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`home.${SECRET_CLUSTER_DOMAIN}`)
      middlewares:
        - name: authelia-forward
          namespace: security
      services:
        - kind: Service
          name: homepage
          port: 3000
